Fixes spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @import url(http://fonts.googleapis.com/css?family=Bitter:400);
 
 html,body {
-	height:100%;
+    height:100%;
     background:center no-repeat fixed url('/images/main-bg.jpg');
     background-size: cover;
     color:#444;
@@ -51,11 +51,11 @@ a:hover {
 }
 
 .icon-bar {
-	background-color:#fff;
+    background-color:#fff;
 }
 
 .navbar-trans {
-	background-color:#2b2b2b;
+    background-color:#2b2b2b;
     color:#cdcdcd;
     border-width:0;
 }
@@ -66,14 +66,14 @@ a:hover {
 }
 
 .navbar-trans li>a:focus,.navbar-trans li.active {
-	background-color:#f44d3c;
-	color:#333;
+    background-color:#f44d3c;
+    color:#333;
 }
 
 .navbar-trans li>a:hover {
-	background-color:#f44d3c;
-	color:#fff;
-	opacity:0.5;
+    background-color:#f44d3c;
+    color:#fff;
+    opacity:0.5;
 }
 
 .navbar-trans a{
@@ -82,48 +82,48 @@ a:hover {
 }
 
 .navbar-trans .form-control:focus {
-	border-color: #eee;
-	outline: 0;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
-	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
+    border-color: #eee;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
 }
 
 .scroll-down {
-  position: absolute;
-  left: 50%;
-  bottom: 40px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  height: 50px;
-  width: 50px;
-  margin-left: -15px;
-  display: block;
-  padding: 7px;
-  text-align: center;
-  z-index:-1
+    position: absolute;
+    left: 50%;
+    bottom: 40px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    margin-left: -15px;
+    display: block;
+    padding: 7px;
+    text-align: center;
+    z-index:-1
 }
 
 .scroll-up {
-  position: fixed;
-  display: none;
-  z-index: 999;
-  bottom: 2em;
-  right: 2em;
+    position: fixed;
+    display: none;
+    z-index: 999;
+    bottom: 2em;
+    right: 2em;
 }
 
 .scroll-up a {
-  background-color: rgba(135, 135, 135, 0.5);
-  display: block;
-  width: 35px;
-  height: 35px;
-  text-align: center;
-  color: #fff;
-  font-size: 15px;
-  line-height: 30px;
+    background-color: rgba(135, 135, 135, 0.5);
+    display: block;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    color: #fff;
+    font-size: 15px;
+    line-height: 30px;
 }
 
 section {
-	padding-top:70px;
+    padding-top:70px;
     padding-bottom:50px;
     min-height:100%;
     min-height:calc(100% - 0);
@@ -143,45 +143,45 @@ section {
 }
 
 #section1, #section2 {
-	background-color: rgba(0,0,0,0.7);
-	color:#fff;
-	font-family: 'Bitter', serif;
+    background-color: rgba(0,0,0,0.7);
+    color:#fff;
+    font-family: 'Bitter', serif;
 }
 
 #section4 {
-	background-color: #f6f6f6;
-	color:#444;
+    background-color: #f6f6f6;
+    color:#444;
 }
 
 #section3 {
-	background-color: #fff;
+    background-color: #fff;
 }
 
 #section2 {
-	background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,0.9);
 }
 
 #section5 {
-	background-color: #fff;
+    background-color: #fff;
 }
 
 #section6 {
-    background-color: #eee;
-	min-height:130px;
-	padding-top:40px;
-	padding-bottom:40px;
+        background-color: #eee;
+    min-height:130px;
+    padding-top:40px;
+    padding-bottom:40px;
 }
 
 #section7 {
-	background-color: #f44d3c;
-	color: #f6f6f6;
-	min-height:130px;
-	padding-top:40px;
-	padding-bottom:40px;
+    background-color: #f44d3c;
+    color: #f6f6f6;
+    min-height:130px;
+    padding-top:40px;
+    padding-bottom:40px;
 }
 
 footer {
-	background-color:#2b2b2b;
+    background-color:#2b2b2b;
     color:#ddd;
     min-height:100px;
     padding-top:20px;
@@ -195,49 +195,58 @@ footer .nav>li>a {
 
 footer .nav>li>a:hover {
     background-color:transparent;
-	color:#fff;
+    color:#fff;
 }
 
 .spacer {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 
 .persona-image {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .panel-default>.panel-heading {
-  background-color: #D0A09C;
+    background-color: #D0A09C;
 }
 
 .img-photo {
-  border: solid;
+    border: solid;
 }
 
 .img-hypothesis {
-  max-height: 320px;
-  /*Center the image*/
-  margin-left: auto;
-  margin-right: auto;
+    max-height: 320px;
+    /*Center the image*/
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .img-wireframe {
-  max-height: 700px;
-  /*Center the image*/
-  margin-left: auto;
-  margin-right: auto;
+    max-height: 700px;
+    /*Center the image*/
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.img-iterations {
+    max-height: 550px;
+    margin-bottom: 40px;
+    /*Center the image*/
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .problem-and-solution-section, .problem-statement-and-iterations-section {
-  background-color: #f6f6f6;
+    background-color: #f6f6f6;
 }
 
 h2, h3 {
-  font-family: 'Bitter', serif;
+    font-family: 'Bitter', serif;
 }
 
 h2 {
-	font-size: 50px;
+    font-size: 50px;
 }
 
 h3 {
